--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-TW">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
     <title>小虎找零食</title>
     <!-- Tailwind CSS -->
     <script src="https://cdn.tailwindcss.com"></script>
@@ -12,7 +12,11 @@
     <link href="https://fonts.googleapis.com/css2?family=DotGothic16&display=swap" rel="stylesheet">
     
     <style>
-        body {
+        html, body {
+            height: 100%;
+            width: 100%;
+            margin: 0;
+            padding: 0;
             font-family: 'DotGothic16', sans-serif;
             background-color: #202020;
             overflow: hidden; /* Prevent scrolling */
@@ -82,13 +86,14 @@
         }
 
         #game-container {
-            width: 100vw;
-            height: 100vh;
+            width: 100%;
+            /* Fix for mobile browser address bar */
+            height: 100%; 
+            height: 100dvh; 
             max-width: 800px; /* Tablet/Desktop constraint */
             margin: 0 auto;
             position: relative;
             background-color: #000;
-            /* 讓內容垂直置中，這樣完整顯示的圖片會在中間 */
             display: flex;
             align-items: center; 
             justify-content: center;
@@ -97,9 +102,9 @@
         #scene-bg {
             width: 100%;
             height: 100%;
-            object-fit: contain; /* 改為 contain：保持原圖比例並完整顯示 */
+            object-fit: contain;
             image-rendering: pixelated;
-            position: absolute; /* 保持絕對定位 */
+            position: absolute;
             top: 0;
             left: 0;
         }
@@ -127,7 +132,9 @@
         /* Dialogue Box */
         .dialogue-container {
             position: absolute;
+            /* Improved positioning for mobile safety areas */
             bottom: 20px;
+            bottom: calc(20px + env(safe-area-inset-bottom));
             left: 10px;
             right: 10px;
             height: 160px;
@@ -218,7 +225,7 @@
             top: 0; left: 0;
             width: 100%;
             height: 100%;
-            object-fit: contain; /* Changed to contain to prevent cropping */
+            object-fit: contain; 
             image-rendering: pixelated;
             z-index: -1;
         }
