--- a/index.html
+++ b/index.html
@@ -303,8 +303,8 @@
         const items = [
             { name: "汪喵", img: "汪喵.png", isCorrect: false },
             { name: "怪獸", img: "怪獸.png", isCorrect: false },
-            { name: "沃野蝦仁", img: "沃野蝦仁.png", isCorrect: true },
-            { name: "一口", img: "一口.png", isCorrect: false }
+            { name: "一口", img: "一口.png", isCorrect: false },
+            { name: "沃野蝦仁", img: "沃野蝦仁.png", isCorrect: true }
         ];
 
         // Scene Logic Definition
@@ -319,7 +319,7 @@
             },
             1: {
                 bg: "店門口場景1.png",
-                text: "確定是這裡嗎?",
+                text: "確定要進入嗎?",
                 type: "yes_no_scene",
                 nextYes: 2,
                 nextNo: "game_over_wrong_place"
